--- a/pc.html
+++ b/pc.html
@@ -338,6 +338,14 @@
       <div id="u46" class="ax_default _图片">
         <img id="u46_img" class="img " src="images/pc/regen/u46.png"/>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u47" class="ax_default label">
+        <div id="u47_div" class=""></div>
+        <div id="u47_text" class="text ">
+          <p><span style="text-decoration:underline;">更新社会关系</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
