--- a/pc.html
+++ b/pc.html
@@ -25,68 +25,65 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (垂直线) -->
+      <div id="u0" class="ax_default line">
+        <img id="u0_img" class="img " src="images/pc/regen/u0.png"/>
+      </div>
+
       <!-- Unnamed (矩形) -->
-      <div id="u0" class="ax_default label">
-        <div id="u0_div" class=""></div>
-        <div id="u0_text" class="text ">
+      <div id="u1" class="ax_default label">
+        <div id="u1_div" class=""></div>
+        <div id="u1_text" class="text ">
           <p><span>选择优惠人</span></p>
         </div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
-      <div id="u1" class="ax_default droplist">
-        <select id="u1_input">
+      <div id="u2" class="ax_default droplist">
+        <select id="u2_input">
         </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u2" class="ax_default label">
-        <div id="u2_div" class=""></div>
-        <div id="u2_text" class="text ">
-          <p><span>优惠人姓名</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u3" class="ax_default box_1">
+      <div id="u3" class="ax_default label">
         <div id="u3_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u4" class="ax_default label">
-        <div id="u4_div" class=""></div>
-        <div id="u4_text" class="text ">
+        <div id="u3_text" class="text ">
           <p><span>优惠人姓名</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (下拉列表框) -->
-      <div id="u5" class="ax_default droplist">
-        <select id="u5_input">
-        </select>
+      <!-- Unnamed (矩形) -->
+      <div id="u4" class="ax_default box_1">
+        <div id="u4_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u5" class="ax_default label">
+        <div id="u5_div" class=""></div>
+        <div id="u5_text" class="text ">
+          <p><span>优惠人姓名</span></p>
+        </div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
       <div id="u6" class="ax_default droplist">
         <select id="u6_input">
+        </select>
+      </div>
+
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u7" class="ax_default droplist">
+        <select id="u7_input">
           <option value="成人">成人</option>
           <option value="儿童">儿童</option>
         </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u7" class="ax_default label">
-        <div id="u7_div" class=""></div>
-        <div id="u7_text" class="text ">
-          <p><span>优惠人姓名</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
       <div id="u8" class="ax_default label">
         <div id="u8_div" class=""></div>
         <div id="u8_text" class="text ">
-          <p><span style="text-decoration:underline;">证件须知</span></p>
+          <p><span>优惠人姓名</span></p>
         </div>
       </div>
 
@@ -94,89 +91,92 @@
       <div id="u9" class="ax_default label">
         <div id="u9_div" class=""></div>
         <div id="u9_text" class="text ">
+          <p><span style="text-decoration:underline;">证件须知</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u10" class="ax_default label">
+        <div id="u10_div" class=""></div>
+        <div id="u10_text" class="text ">
           <p><span>证件号</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u10" class="ax_default box_1">
-        <div id="u10_div" class=""></div>
+      <div id="u11" class="ax_default box_1">
+        <div id="u11_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u11" class="ax_default label">
-        <div id="u11_div" class=""></div>
-        <div id="u11_text" class="text ">
+      <div id="u12" class="ax_default label">
+        <div id="u12_div" class=""></div>
+        <div id="u12_text" class="text ">
           <p><span>联系电话</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u12" class="ax_default box_1">
-        <div id="u12_div" class=""></div>
+      <div id="u13" class="ax_default box_1">
+        <div id="u13_div" class=""></div>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u13" class="ax_default ax_default_hidden" style="display:none; visibility: hidden">
-        <div id="u13_state0" class="panel_state" data-label="State1" style="">
-          <div id="u13_state0_content" class="panel_state_content">
+      <div id="u14" class="ax_default ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u14_state0" class="panel_state" data-label="State1" style="">
+          <div id="u14_state0_content" class="panel_state_content">
 
             <!-- Unnamed (图片) -->
-            <div id="u14" class="ax_default _图片">
-              <img id="u14_img" class="img " src="images/pc/regen/u14.png"/>
+            <div id="u15" class="ax_default _图片">
+              <img id="u15_img" class="img " src="images/pc/regen/u15.png"/>
             </div>
 
             <!-- Unnamed (热区) -->
-            <div id="u15" class="ax_default">
+            <div id="u16" class="ax_default">
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u16" class="ax_default label">
-        <div id="u16_div" class=""></div>
-        <div id="u16_text" class="text ">
+      <div id="u17" class="ax_default label">
+        <div id="u17_div" class=""></div>
+        <div id="u17_text" class="text ">
           <p><span>是否订座</span></p>
         </div>
       </div>
 
       <!-- Unnamed (单选按钮) -->
-      <div id="u17" class="ax_default radio_button">
-        <label for="u17_input" style="position: absolute; left: 0px;">
-          <div id="u17_text" class="text ">
+      <div id="u18" class="ax_default radio_button">
+        <label for="u18_input" style="position: absolute; left: 0px;">
+          <div id="u18_text" class="text ">
             <p><span>是</span></p>
           </div>
         </label>
-        <input id="u17_input" type="radio" value="radio" name="u17"/>
+        <input id="u18_input" type="radio" value="radio" name="u18"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u18" class="ax_default label">
-        <div id="u18_div" class=""></div>
-        <div id="u18_text" class="text ">
+      <div id="u19" class="ax_default label">
+        <div id="u19_div" class=""></div>
+        <div id="u19_text" class="text ">
           <p><span>舱位等级</span></p>
         </div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
-      <div id="u19" class="ax_default droplist">
-        <select id="u19_input">
+      <div id="u20" class="ax_default droplist">
+        <select id="u20_input">
           <option value="经济舱">经济舱</option>
         </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u20" class="ax_default label">
-        <div id="u20_div" class=""></div>
-        <div id="u20_text" class="text ">
+      <div id="u21" class="ax_default label">
+        <div id="u21_div" class=""></div>
+        <div id="u21_text" class="text ">
           <p><span>航段选择</span></p>
         </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u21" class="ax_default box_1">
-        <div id="u21_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -184,52 +184,49 @@
         <div id="u22_div" class=""></div>
       </div>
 
-      <!-- Unnamed (下拉列表框) -->
-      <div id="u23" class="ax_default droplist">
-        <select id="u23_input">
-        </select>
+      <!-- Unnamed (矩形) -->
+      <div id="u23" class="ax_default box_1">
+        <div id="u23_div" class=""></div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u24" class="ax_default label">
-        <div id="u24_div" class=""></div>
-        <div id="u24_text" class="text ">
-          <p><span>承运人</span></p>
-        </div>
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u24" class="ax_default droplist">
+        <select id="u24_input">
+        </select>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u25" class="ax_default label">
         <div id="u25_div" class=""></div>
         <div id="u25_text" class="text ">
+          <p><span>承运人</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u26" class="ax_default label">
+        <div id="u26_div" class=""></div>
+        <div id="u26_text" class="text ">
           <p><span>航班日期</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u26" class="ax_default box_1">
-        <div id="u26_div" class=""></div>
+      <div id="u27" class="ax_default box_1">
+        <div id="u27_div" class=""></div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
-      <div id="u27" class="ax_default droplist">
-        <select id="u27_input">
+      <div id="u28" class="ax_default droplist">
+        <select id="u28_input">
         </select>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u28" class="ax_default label">
-        <div id="u28_div" class=""></div>
-        <div id="u28_text" class="text ">
-          <p><span>航班号</span></p>
-        </div>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u29" class="ax_default label">
         <div id="u29_div" class=""></div>
         <div id="u29_text" class="text ">
-          <p><span>目的地</span></p>
+          <p><span>航班号</span></p>
         </div>
       </div>
 
@@ -237,34 +234,37 @@
       <div id="u30" class="ax_default label">
         <div id="u30_div" class=""></div>
         <div id="u30_text" class="text ">
+          <p><span>目的地</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u31" class="ax_default label">
+        <div id="u31_div" class=""></div>
+        <div id="u31_text" class="text ">
           <p><span>始发地</span></p>
         </div>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u31" class="ax_default ax_default_hidden" style="display:none; visibility: hidden">
-        <div id="u31_state0" class="panel_state" data-label="State1" style="">
-          <div id="u31_state0_content" class="panel_state_content">
+      <div id="u32" class="ax_default ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u32_state0" class="panel_state" data-label="State1" style="">
+          <div id="u32_state0_content" class="panel_state_content">
 
             <!-- Unnamed (图片) -->
-            <div id="u32" class="ax_default _图片">
-              <img id="u32_img" class="img " src="images/pc/regen/u32.png"/>
+            <div id="u33" class="ax_default _图片">
+              <img id="u33_img" class="img " src="images/pc/regen/u33.png"/>
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u33" class="ax_default _文本段落1">
-        <div id="u33_div" class=""></div>
-        <div id="u33_text" class="text ">
+      <div id="u34" class="ax_default _文本段落1">
+        <div id="u34_div" class=""></div>
+        <div id="u34_text" class="text ">
           <p><span>温馨提示：</span></p><p><span>因结算问题，国内航段、国际航段请分开进行申请。</span></p><p><span>您添加的乘机人证件类型可能限制您可选择申请的航段。</span></p>
         </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u34" class="ax_default _图片">
-        <img id="u34_img" class="img " src="images/pc/regen/u34.png"/>
       </div>
 
       <!-- Unnamed (图片) -->
@@ -272,66 +272,66 @@
         <img id="u35_img" class="img " src="images/pc/regen/u35.png"/>
       </div>
 
+      <!-- Unnamed (图片) -->
+      <div id="u36" class="ax_default _图片">
+        <img id="u36_img" class="img " src="images/pc/regen/u36.png"/>
+      </div>
+
       <!-- 提示说明 (动态面板) -->
-      <div id="u36" class="ax_default ax_default_hidden" data-label="提示说明" style="display:none; visibility: hidden">
-        <div id="u36_state0" class="panel_state" data-label="State1" style="">
-          <div id="u36_state0_content" class="panel_state_content">
+      <div id="u37" class="ax_default ax_default_hidden" data-label="提示说明" style="display:none; visibility: hidden">
+        <div id="u37_state0" class="panel_state" data-label="State1" style="">
+          <div id="u37_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u37" class="ax_default box_1">
-              <div id="u37_div" class=""></div>
+            <div id="u38" class="ax_default box_1">
+              <div id="u38_div" class=""></div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u38" class="ax_default label">
-              <div id="u38_div" class=""></div>
-              <div id="u38_text" class="text ">
+            <div id="u39" class="ax_default label">
+              <div id="u39_div" class=""></div>
+              <div id="u39_text" class="text ">
                 <p><span>1、文案上定义优惠人和乘机人</span></p><p><span>2、把联系电话后面的增加按钮往下挪，避免误解为增加联系电话</span></p><p><span>3、已添加优惠人修改为：添加为乘机人。表示从优惠人中选择某个作为乘机人</span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u39" class="ax_default _图片">
-              <img id="u39_img" class="img " src="images/pc/regen/u39.png"/>
+            <div id="u40" class="ax_default _图片">
+              <img id="u40_img" class="img " src="images/pc/regen/u40.png"/>
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u40" class="ax_default _图片">
-        <img id="u40_img" class="img " src="images/pc/regen/u35.png"/>
+      <div id="u41" class="ax_default _图片">
+        <img id="u41_img" class="img " src="images/pc/regen/u36.png"/>
       </div>
 
       <!-- 提示说明2 (动态面板) -->
-      <div id="u41" class="ax_default ax_default_hidden" data-label="提示说明2" style="display:none; visibility: hidden">
-        <div id="u41_state0" class="panel_state" data-label="State1" style="">
-          <div id="u41_state0_content" class="panel_state_content">
+      <div id="u42" class="ax_default ax_default_hidden" data-label="提示说明2" style="display:none; visibility: hidden">
+        <div id="u42_state0" class="panel_state" data-label="State1" style="">
+          <div id="u42_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u42" class="ax_default box_1">
-              <div id="u42_div" class=""></div>
+            <div id="u43" class="ax_default box_1">
+              <div id="u43_div" class=""></div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u43" class="ax_default label">
-              <div id="u43_div" class=""></div>
-              <div id="u43_text" class="text ">
+            <div id="u44" class="ax_default label">
+              <div id="u44_div" class=""></div>
+              <div id="u44_text" class="text ">
                 <p><span>1、文案上定义乘坐航班</span></p><p><span>2、把航班号后面的增加按钮往下挪，避免误解为增加航班号</span></p><p><span>3、增加一行：添加为乘坐航班</span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u44" class="ax_default _图片">
-              <img id="u44_img" class="img " src="images/pc/regen/u39.png"/>
+            <div id="u45" class="ax_default _图片">
+              <img id="u45_img" class="img " src="images/pc/regen/u40.png"/>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u45" class="ax_default _图片">
-        <img id="u45_img" class="img " src="images/pc/regen/u45.png"/>
       </div>
 
       <!-- Unnamed (图片) -->
@@ -339,11 +339,42 @@
         <img id="u46_img" class="img " src="images/pc/regen/u46.png"/>
       </div>
 
+      <!-- Unnamed (图片) -->
+      <div id="u47" class="ax_default _图片">
+        <img id="u47_img" class="img " src="images/pc/regen/u47.png"/>
+      </div>
+
       <!-- Unnamed (矩形) -->
-      <div id="u47" class="ax_default label">
-        <div id="u47_div" class=""></div>
-        <div id="u47_text" class="text ">
+      <div id="u48" class="ax_default label">
+        <div id="u48_div" class=""></div>
+        <div id="u48_text" class="text ">
           <p><span style="text-decoration:underline;">更新社会关系</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u49" class="ax_default ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u49_state0" class="panel_state" data-label="State1" style="">
+          <div id="u49_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (图片) -->
+            <div id="u50" class="ax_default _图片">
+              <img id="u50_img" class="img " src="images/pc/regen/u40.png"/>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u51" class="ax_default _图片">
+              <img id="u51_img" class="img " src="images/pc/regen/u51.png"/>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u52" class="ax_default box_1">
+        <img id="u52_img" class="img " src="images/pc/regen/u52.png"/>
+        <div id="u52_text" class="text ">
+          <p><span>查看业务流程</span></p>
         </div>
       </div>
     </div>
